_archive/content-services/3.4/concepts/transerv-installing.md
---
author: Alfresco Documentation
---

# Installing the Alfresco Transformation Server

This section describes how to install all the components required for the Alfresco Transformation Server.

The following artifacts are shipped for the Alfresco Transformation Server:

-   alfresco-transformationserver-server-1.1.0.zip
-   alfresco-3.4-transformationserver-amp-1.0.2.zip

The Transformation Server AMP zip file \(alfresco-transformationserver-server-1.1.0.zip\) contains the following artifact:

-   alfresco-transformationserver-server-1.1.0.msi

The Transformation Server zip file \(alfresco-3.4-transformationserver-amp-1.0.2.zip\) contains the following artifact:

-   alfresco-transformationserver-repo-1.0.2.amp

Installing the Transformation Server consists of two parts:

1.  Installing the MSI installation package on the standalone Transformation Server.
2.  Installing the relevant AMP package and updating the license on the Alfresco server.

-   **[Installing the standalone Transformation Server](../tasks/transerv-standalone-installing.md)**  
This section describes how to install the standalone Transformation Server.
-   **[Installing the Transformation Server on Alfresco](../tasks/transerv-installing-amps.md)**  
This section describes how to install the Transformation Server AMP and to update the required license.

**Parent topic:**[Installing and configuring the Alfresco Transformation Server](../concepts/transerv-intro.md)

